# vgrna-project-scripts

./: CMakeLists.txt  README.md  average_diploid_rsem_expression.py  calc_rsem_fragment_length_stats.R  shuffle_diploid_rsem_expression.py
R/: calc_rsem_fragment_length_stats.R  impute_hla_cds_alleles.R  parse_expression_data.R  plot_allele_specific_expression.R  plot_coverage_correlation.R  plot_coverage_replicate_correlation.R  plot_expression_correlation.R  plot_expression_correlation2.R  plot_expression_correlation_rsem.R  plot_expression_data.R  plot_gibbs_stats.R  plot_haploid_expression_data.R  plot_hla_typing.R  plot_hst_diversity.R  plot_mapping_bias.R  plot_mapping_compute.R  plot_mapping_compute_kube.R  plot_mapping_memory.R  plot_mapping_stats.R  plot_overlap_benchmark.R  plot_real_overlap.R  plot_region_overlap.R  plot_rsem_sim_benchmark.R  plot_rsem_sim_overlap.R  plot_variant_concordance_effect.R  plot_vg_sim_benchmark.R  plot_vg_sim_distance.R  plot_vg_sim_overlap.R  utils.R
c++/: CMakeLists.txt
c++/src/: calc_allele_read_coverage.cpp  calc_exon_read_coverage.cpp  calc_read_regions_overlap_stats.cpp  calc_read_transcript_overlap_stats.cpp  calc_rsem_benchmark_stats.cpp  calc_vg_benchmark_stats.cpp  convert_cds_alignments_to_haplotypes.cpp  convert_rsem_sim_info.cpp  convert_snaptron_to_bed.cpp  filter_intergenic_introns.cpp  filter_multi_gene_introns.cpp  utils.hpp
python/: calc_allele_rpvg_expression.py  calc_vg_sim_fragment_length_stats.py  compare_hst_sequences.py  construct_allele_hst_table.py  construct_hst_variant_table.py  construct_variant_hst_table.py  convert_vg_sim_to_rpvg.py  reference_pad_cds_alleles.py  utils.py
python/imprinting_analysis/: README.md  imprinting_analysis.py  make_plots.py  preprocess_vcfs.py
src/: calc_allele_read_coverage.cpp  calc_read_transcript_overlap_stats.cpp  calc_rsem_benchmark_stats.cpp  utils.hpp
